2020-10-14  7.0.10-35  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-35 GIT revision 17...

2020-10-14  7.0.10-35  <quetzlzacatenango@image...>
  * prefer ffmpeg over avconv

2020-10-07  7.0.10-34  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-34 GIT revision 17695:de3284341:20201008

2020-10-05  7.0.10-34  <quetzlzacatenango@image...>
  * check for linux-compatible sendfile().

2020-10-04  7.0.10-33  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-33 GIT revision 17683:c1bfec283:20201004

2020-10-04  7.0.10-33  <quetzlzacatenango@image...>
  * miscellaneous clean-up.

2020-10-02  7.0.10-32  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-32 GIT revision 17670:1686dd921:20201002 

2020-09-27  7.0.10-32  <quetzlzacatenango@image...>
  * enable WMF for module build.
  * writing PDF requires a seekable stream.

2020-09-27  7.0.10-31  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-31 GIT revision 17652:78ad905d9:20200926

2020-09-20  7.0.10-31  <quetzlzacatenango@image...>
  * Add support for APNG (specify explicitly, e.g. apng:animate.png).
  * Add support for WEBM.

2020-09-19  7.0.10-30  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-30 GIT revision 17641:ab95f7264:20200919

2020-09-15  7.0.10-30 Dirk Lemstra <dirk@lem.....org>
  * Fixed registry lookup of GhostScript that now writes the patch version to the
    registry (reference https://github.com/ImageMagick/ImageMagick/issues/2571).

2020-09-07  7.0.10-30  <quetzlzacatenango@image...>
  * Add endian support to JSON coder.
  * Regression: MapCache type cache allocation skipped (reference
    https://github.com/ImageMagick/ImageMagick6/issues/97).
  * Some DCM images include a thumbnail (reference
    https://github.com/ImageMagick/ImageMagick/pull/2558).

2020-09-05  7.0.10-29  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-29 GIT revision 17580:fc52fa0a9:20200905
